--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         name="search"
         [(ngModel)]="searchText"
         autocomplete="off"
-        placeholder="&#61442;  Start searching for a hero by id or name or country"
+        placeholder="&#61442;  Start searching  by id or name or country"
       />
     </div>
     <table class="table table-striped">
